个人中心-功能完成

--- a/geek-m/src/components/NavBar/index.module.scss
+++ b/geek-m/src/components/NavBar/index.module.scss
@@ -8,7 +8,7 @@
   // padding: 0 42px;
   background-color: #fff;
   // border-bottom: 1px solid #ccc;
-  @include hairline('bottom');
+  @include hairline('bottom',#ccc);
 
   :global {
     .left {
